Improvement: Extract datafile component, base/util and base/crypt (OFBIZ-3500)
* There are a LOT of circular dependencies !!!
* I had to split some files to be able to shuffle code around:
  UtilPropertiesRuntime, etc.
* A lot of code changes are related to CheckStyle
* We should consider spotbugs for code formatting via gradle